--- a/MasavBL/HTMLbroadcastReport.html
+++ b/MasavBL/HTMLbroadcastReport.html
@@ -54,7 +54,7 @@
                 </tr>
             </tbody>
         </table>
-        <p>נא לאשר רשימה זו בפקס מס'6182089/03 או בטלפון מס'5700451/03 .או במייל <a href="mailto:com.gmail@shs.he">com.gmail@shs.he</a></p>
+        <p>נא לאשר רשימה זו בפקס מס'6182089/03 או בטלפון מס'5700451/03 .או במייל <a href="mailto:hen.shs@gmail.com">hen.shs@gmail.com</a></p>
         <p style="text-align: right;">ביצוע: חן שירותי שכר</p>
     </div>
 </body>
