--- a/MasavBL/‏‏HTMLbroadcastReportNew.html
+++ b/MasavBL/‏‏HTMLbroadcastReportNew.html
@@ -71,7 +71,7 @@
             </tbody>
         </table>
          <br />
-        <span class="cls_003">נא לאשר רשימה זו בפקס מס'03/6182089 או בטלפון מס'03/5700451 .או במייל <a href="mailto:shs.he@gmail.com">shs.he@gmail.com</a></span>
+        <span class="cls_003">נא לאשר רשימה זו בפקס מס'03/6182089 או בטלפון מס'03/5700451 .או במייל <a href="mailto:hen.shs@gmail.com">hen.shs@gmail.com</a></span>
         <br />
         <span class="cls_003" style="text-align: right;">ביצוע: חן שירותי שכר</span>
     </div>
